# reconfig-cell-digital-twin

./: .gitignore  README.md  fastcdr_compat.c  step2_pick_place_test.py
src/reconfig_cell/cell_bringup/: CMakeLists.txt  package.xml
src/reconfig_cell/cell_bringup/config/: ros2_controllers.yaml  ur5_rg2_controllers.yaml
src/reconfig_cell/cell_bringup/config/moveit/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ur5_rg2.srdf  ur5_rg2_moveit_controllers.yaml  ur5_with_gripper.srdf
src/reconfig_cell/cell_bringup/launch/: cell_run.launch.py  cell_trials.launch.py  cell_warehouse.launch.py  step1_bringup.launch.py  step2_bringup.launch.py  step2_pick_place.launch.py  warehouse_bringup.launch.py  warehouse_cell.launch.py  warehouse_pick_place.launch.py
src/reconfig_cell/cell_bringup/models/: cube_part.sdf  cube_part_rg2.sdf  sink_1.sdf  sink_2.sdf  source_1.sdf  source_2.sdf
src/reconfig_cell/cell_bringup/rviz/: step1.rviz
src/reconfig_cell/cell_bringup/scripts/: step2_pick_place.py  warehouse_pick_place.py
src/reconfig_cell/cell_bringup/urdf/: ur5_rg2_arm.urdf.xacro  ur5_with_gripper.urdf.xacro
src/reconfig_cell/cell_bringup/worlds/: cell_arranged.world  step2_lane.world.sdf  warehouse_backdrop.sdf
src/reconfig_cell/cell_description/: CMakeLists.txt  config_1.yaml  config_2.yaml  config_invalid.yaml  package.xml
src/reconfig_cell/cell_generator/: CMakeLists.txt  package.xml
src/reconfig_cell/cell_gripper_description/: CMakeLists.txt  package.xml
src/reconfig_cell/cell_scene_manager/: CMakeLists.txt  package.xml
src/reconfig_cell/cell_synth/: CMakeLists.txt  FULLCELL_SYNTHESIS.md  OPTIMIZER_COMPARISON.md  PHASE3_SCALE.md  README.md  SURROGATE_VS_REAL.md  package.xml
src/reconfig_cell/cell_synth/launch/: synth.launch.py  synth_demo.launch.py  synth_trials.launch.py
src/reconfig_cell/cell_synth/scripts/: compare_optimizers  motion_probe  optimize  oracle_smoke  plot_compare.py  plot_results.py  run_valset_trials.sh  score_probe  synth_core.py  synth_fullcell  synthesize  valset  vw_probe
src/reconfig_cell/cell_task_executor/: CMakeLists.txt  TRIALS.md  package.xml
src/reconfig_cell/cell_task_executor/results/: aggregate_trials.py  summary_config_1.txt  summary_config_2.txt  trials_config_1.csv  trials_config_1_partA.csv  trials_config_1_partB.csv  trials_config_1_provisional.csv  trials_config_2.csv  trials_config_2_fixA.csv  trials_config_2_fixB.csv  trials_config_2_fixC.csv  trials_config_2_fixD.csv  trials_config_2_partA.csv  trials_config_2_partB.csv  trials_config_2_partC_DISCARDED_simdegraded.csv
src/reconfig_cell/cell_task_executor/scripts/: task_executor  trial_runner
src/reconfig_cell/fullcell_out/: fc_s300_n3.yaml  fc_s301_n3.yaml  fc_s302_n3.yaml  fc_s303_n3.yaml  fc_s305_n3.yaml  fullcell_summary_fullcell_n3.csv
src/reconfig_cell/opt_compare/: best_bo_n3.yaml  best_cmaes_n3.yaml  best_ga_n3.yaml  best_pso_n3.yaml  best_sa_n3.yaml  compare_convergence_n3.csv  compare_secondary_prodSA_n3.csv  compare_seedcurves_n3.csv  compare_summary_n3.csv
src/reconfig_cell/opt_handbase/: sa_s400_n3.yaml  sa_traj_s400_n3.csv
src/reconfig_cell/opt_out/: opt_summary_n3.csv  sa_s100_n3.yaml  sa_s101_n3.yaml  sa_s102_n3.yaml  sa_s200_n3.yaml  sa_s201_n3.yaml  sa_s202_n3.yaml  sa_s203_n3.yaml  sa_s204_n3.yaml  sa_s205_n3.yaml  sa_traj_s100_n3.csv  sa_traj_s101_n3.csv  sa_traj_s102_n3.csv  sa_traj_s200_n3.csv  sa_traj_s201_n3.csv  sa_traj_s202_n3.csv  sa_traj_s203_n3.csv  sa_traj_s204_n3.csv  sa_traj_s205_n3.csv
src/reconfig_cell/opt_out_final/: opt_summary_n3.csv  sa_s300_n3.yaml  sa_s301_n3.yaml  sa_s302_n3.yaml  sa_s303_n3.yaml  sa_s304_n3.yaml  sa_s305_n3.yaml  sa_traj_s300_n3.csv  sa_traj_s301_n3.csv  sa_traj_s302_n3.csv  sa_traj_s303_n3.csv  sa_traj_s304_n3.csv  sa_traj_s305_n3.csv
src/reconfig_cell/opt_out_gate/: opt_summary_n3.csv  sa_s101_n3.yaml  sa_s102_n3.yaml  sa_s104_n3.yaml  sa_traj_s100_n3.csv  sa_traj_s101_n3.csv  sa_traj_s102_n3.csv  sa_traj_s103_n3.csv  sa_traj_s104_n3.csv
src/reconfig_cell/paper/: .gitignore  README.md  main.tex  main_ieee.tex  make_figs.py  shoot.sh
src/reconfig_cell/phase3_ur10/: opt_summary_n3.csv  sa_s600_n3.yaml  sa_s601_n3.yaml  sa_s602_n3.yaml  sa_s603_n3.yaml  sa_s604_n3.yaml  sa_s605_n3.yaml  sa_s606_n3.yaml  sa_s607_n3.yaml  sa_s608_n3.yaml  sa_s609_n3.yaml  sa_s610_n3.yaml  sa_s611_n3.yaml  sa_s612_n3.yaml  sa_s613_n3.yaml  sa_s614_n3.yaml  sa_s615_n3.yaml  sa_s616_n3.yaml  sa_s617_n3.yaml  sa_s618_n3.yaml  sa_s619_n3.yaml  sa_s620_n3.yaml  sa_s621_n3.yaml  sa_s622_n3.yaml  sa_s623_n3.yaml  sa_s624_n3.yaml  sa_s625_n3.yaml  sa_s626_n3.yaml  sa_s627_n3.yaml  sa_s628_n3.yaml  sa_s629_n3.yaml  sa_s630_n3.yaml  sa_s631_n3.yaml  sa_s632_n3.yaml  sa_s633_n3.yaml  sa_s634_n3.yaml  sa_s635_n3.yaml  sa_s636_n3.yaml  sa_s637_n3.yaml  sa_s638_n3.yaml  (+61 more)
src/reconfig_cell/phase3_ur10_val/: motion.csv  val_0_n3.yaml  val_10_n3.yaml  val_11_n3.yaml  val_12_n3.yaml  val_13_n3.yaml  val_14_n3.yaml  val_15_n3.yaml  val_16_n3.yaml  val_17_n3.yaml  val_18_n3.yaml  val_19_n3.yaml  val_1_n3.yaml  val_20_n3.yaml  val_21_n3.yaml  val_22_n3.yaml  val_23_n3.yaml  val_24_n3.yaml  val_25_n3.yaml  val_26_n3.yaml  val_27_n3.yaml  val_28_n3.yaml  val_29_n3.yaml  val_2_n3.yaml  val_3_n3.yaml  val_4_n3.yaml  val_5_n3.yaml  val_6_n3.yaml  val_7_n3.yaml  val_8_n3.yaml  val_9_n3.yaml  valset_surrogate.csv  vw_surrogate.csv
src/reconfig_cell/phase3_ur5/: opt_summary_n3.csv  sa_s500_n3.yaml  sa_s501_n3.yaml  sa_s502_n3.yaml  sa_s503_n3.yaml  sa_s504_n3.yaml  sa_s505_n3.yaml  sa_s506_n3.yaml  sa_s507_n3.yaml  sa_s508_n3.yaml  sa_s509_n3.yaml  sa_s510_n3.yaml  sa_s511_n3.yaml  sa_s512_n3.yaml  (+87 more)
src/reconfig_cell/reference_baseline/: CMakeLists.txt  README.md  package.xml
src/reconfig_cell/reference_baseline/config_1/: scene.yaml  task.yaml  world.sdf
src/reconfig_cell/reference_baseline_conveyor/: CMakeLists.txt  README.md  package.xml
src/reconfig_cell/reference_baseline_conveyor/config_1/: scene.yaml  task.yaml  world.sdf
src/reconfig_cell/reference_baseline_conveyor/config_2/: scene.yaml  task.yaml  world.sdf
(+91 files in other folders)
