<?xml version="1.0"?>
<package format="3">
  <name>reference_baseline</name>
  <version>0.1.0</version>
  <description>Frozen generator output for config 1 — the effort-metric baseline</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
